# DummyTitanic

./: README.md  pyproject.toml  test_model_processor.ipynb  titanic.pkl
.github/workflows/: build.yml
docs/source/: conf.py  example.rst  index.rst
tests/: main_test.py
titanic_model_processor/: main.py
