[tool.poetry]
name = "titanic-model-processor"
version = "0.1.2"
description = ""
authors = ["Juan Sebastián Ramírez Artiles <juanseraar@hotmail.com>"]
readme = "README.md"
packages = [{include = "titanic_model_processor"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.982"
black = "^22.10.0"
pylint = "^2.15.5"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
